// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 404 error correctly 1`] = `
<SectionsContainer>
  <BasicSection>
    <div
      className="components-error-index-m__container"
    >
      <div
        className="components-error-index-m__code"
      >
        404
      </div>
      <h1
        className="components-error-index-m__h1"
      >
        Page Not Found
      </h1>
    </div>
  </BasicSection>
  <CopyrightFooter />
</SectionsContainer>
`;

exports[`should render a 500 error correctly 1`] = `
<SectionsContainer>
  <BasicSection>
    <div
      className="components-error-index-m__container"
    >
      <div
        className="components-error-index-m__code"
      >
        500
      </div>
      <h1
        className="components-error-index-m__h1"
      >
        Server Error
      </h1>
    </div>
  </BasicSection>
  <CopyrightFooter />
</SectionsContainer>
`;
